kubernetes/claims-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: claims-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: claims-service

  template:
    metadata:
      labels:
        app: claims-service

    spec:
      containers:
      - name: claims-service
        image: insurance/claims-service:latest

        ports:
        - containerPort: 8082

---

apiVersion: v1
kind: Service

metadata:
  name: claims-service

spec:
  selector:
    app: claims-service

  ports:
  - port: 80
    targetPort: 8082

  type: ClusterIP
