kubernetes/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
      - name: notification-service
        image: insurance/notification-service:latest

        ports:
        - containerPort: 8083

---

apiVersion: v1
kind: Service

metadata:
  name: notification-service

spec:
  selector:
    app: notification-service

  ports:
  - port: 80
    targetPort: 8083

  type: ClusterIP
