kubernetes/policy-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: policy-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: policy-service

  template:
    metadata:
      labels:
        app: policy-service

    spec:
      containers:
      - name: policy-service
        image: insurance/policy-service:latest

        ports:
        - containerPort: 8081

---

apiVersion: v1
kind: Service

metadata:
  name: policy-service

spec:
  selector:
    app: policy-service

  ports:
  - port: 80
    targetPort: 8081

  type: ClusterIP
